...
    _ShellOverlayDestination.friends => 'Friends',
    _ShellOverlayDestination.mentees => 'Mentorship',
    _ShellOverlayDestination.mentors => 'Mentors',
    _ShellOverlayDestination.enemies => 'Anomalies',
    _ShellOverlayDestination.dungeons => 'Dungeons',
    _ShellOverlayDestination.tournaments => 'Tournament',
    _ShellOverlayDestination.advancement => 'Advance',
  };

  String get shortLabel => switch (this) {
    _ShellOverlayDestination.battle => 'Battle',
    _ShellOverlayDestination.towers => 'Towers',
    _ShellOverlayDestination.managers => 'Managers',
...
